Update logo and contact email in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- NAVBAR -->
 <nav class="navbar">
-    <div class="logo">Jack.D</div>
+    <div class="logo">Jack.D.Creations</div>
     <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#journey">Journey</a></li>
@@ -88,7 +88,7 @@
     <h2>Contact</h2>
     <p>
         More details and links will be added as projects take shape.<br />
-        Email: <strong>jackdundaunted@gmail.com</strong>
+        Email: <strong>jackdcreations007@gmail.com</strong>
     </p>
 </section>
 
